tests/errors/preprocessor/ident_not_macro.c
#eval (1 + 2u)

void main()
{

}
